--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
-# game-row {
+body {
   display: block;
   margin-left: auto;
   margin-right: auto;
   text-align: center
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
