--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,22 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center
+  text-align: center;
+  font-size: small
+  
 }
 .centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+h1 {
+  font-size: 2em;
+}
+h2 {
+  font-size: 1em;
+}
+.header-col {
+  font-size: 2em;
 }
